# erpnext

./: .mergify.yml  README.md  pyproject.toml  setup.py
.github/workflows/: generate-pot-file.yml  initiate_release.yml  linters.yml  patch.yml  run-indinvidual-tests.yml  server-tests-mariadb.yml  server-tests-postgres.yml
erpnext/: __init__.py  hooks.py  patches.txt
erpnext/accounts/: deferred_revenue.py  general_ledger.py  party.py  utils.py
erpnext/accounts/report/: non_billed_report.py
erpnext/accounts/test/: test_reports.py  test_utils.py
erpnext/controllers/: accounts_controller.py  budget_controller.py  buying_controller.py  item_variant.py  queries.py  sales_and_purchase_return.py  selling_controller.py  stock_controller.py  subcontracting_controller.py  taxes_and_totals.py  trends.py
erpnext/controllers/tests/: test_accounts_controller.py  test_item_variant.py  test_item_wise_inventory_account.py  test_item_wise_tax_details.py  test_mapper.py  test_qty_based_taxes.py  test_queries.py  test_reactivity.py  test_transaction_base.py
erpnext/crm/: frappe_crm_api.py
erpnext/desktop_icon/: accounting.json  accounts_setup.json  assets.json  banking.json  budget.json  buying.json  crm.json  financial_reports.json  home.json  manufacturing.json  opening_&_closing.json  payments.json  projects.json  quality.json  selling.json  settings.json  share_management.json  stock.json  subcontracting.json  subscription.json  support.json  taxes.json
erpnext/locale/: ar.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  main.pot  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr_CS.po  sv.po  ta.po  th.po  tr.po  vi.po  zh.po
erpnext/manufacturing/report/: test_reports.py
erpnext/patches/v11_0/: update_sales_partner_type.py
erpnext/patches/v13_0/: update_project_template_tasks.py
erpnext/setup/: install.py  utils.py
erpnext/startup/: boot.py
erpnext/stock/: deprecated_serial_batch.py  get_item_details.py  serial_batch_bundle.py  stock_ledger.py
erpnext/templates/: utils.py
erpnext/tests/: test_init.py  test_notifications.py  test_point_of_sale.py  test_regional.py  test_webform.py
erpnext/utilities/: transaction_base.py
erpnext/workspace_sidebar/: accounting.json  accounts_setup.json  assets.json  banking.json  budget.json  buying.json  crm.json  erpnext_settings.json  financial_reports.json  home.json  invoicing.json  manufacturing.json  projects.json  quality.json  selling.json  settings.json  share_management.json  stock.json  subcontracting.json  subscription.json  support.json  taxes.json
jewelry/: hooks.py
jewelry/jewelry/: __init__.py  custom_fields.py
jewelry/translations/: zh.csv
jewelry/utils/: pricing.py
(+491 files in other folders)
