[project]
name = "erpnext"
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io"}
]
description = "Open Source ERP"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Core dependencies
    "Unidecode~=1.4.0",
    "barcodenumber~=0.5.0",
    "rapidfuzz~=3.14.3",
    "holidays~=0.87",

    # integration dependencies
    "googlemaps~=4.10.0",
    "plaid-python~=7.2.1",
    "python-youtube~=0.9.8",

    # Not used directly - required by PyQRCode for PNG generation
    "pypng~=0.20220715.0",

    # MT940 parser for bank statements
    "mt-940>=4.26.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.frappe.testing.function_type_validation]
max_module_depth = 1
skip_namespaces = [
    "erpnext.deprecation_dumpster",
    "erpnext.assets.dashboard_fixtures",  # https://github.com/frappe/erpnext/issues/44418
]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[project.urls]
Homepage = "https://frappe.io/erpnext"
Repository = "https://github.com/frappe/erpnext.git"
"Bug Reports" = "https://github.com/frappe/erpnext/issues"
