[project]
name = "jewelry"
authors = [
    { name = "Your Name", email = "your@email.com"}
]
description = "Jewelry Dynamic Pricing Module for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
    "erpnext"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
